// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Avatar Default 1`] = `
.c0 {
  width: 1.87rem;
  height: 1.87rem;
  border-radius: 100%;
  background-color: #ececec;
  overflow: hidden;
}

<div
  className="c0"
  size="small"
/>
`;

exports[`Storyshots Atoms/Avatar Static Image 1`] = `
.c0 {
  width: 2.75rem;
  height: 2.75rem;
  border-radius: 100%;
  background-color: #ececec;
  overflow: hidden;
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<div
  className="c0"
  size="medium"
>
  <span
    style={
      Object {
        "background": "none",
        "border": 0,
        "boxSizing": "border-box",
        "display": "inline-block",
        "height": "initial",
        "margin": 0,
        "maxWidth": "100%",
        "opacity": 1,
        "overflow": "hidden",
        "padding": 0,
        "position": "relative",
        "width": "initial",
      }
    }
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "margin": 0,
          "maxWidth": "100%",
          "opacity": 1,
          "padding": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27100%27%20height=%27100%27/%3e"
        style={
          Object {
            "background": "none",
            "border": 0,
            "display": "block",
            "height": "initial",
            "margin": 0,
            "maxWidth": "100%",
            "opacity": 1,
            "padding": 0,
            "width": "initial",
          }
        }
      />
    </span>
    <img
      className="c1"
      data-nimg="intrinsic"
      decoding="async"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
    <noscript>
      <img
        className="c1"
        data-nimg="intrinsic"
        decoding="async"
        loading="lazy"
        src="/img.jpg"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </noscript>
  </span>
</div>
`;

exports[`Storyshots Atoms/Avatar Url Image 1`] = `
.c0 {
  width: 4rem;
  height: 4rem;
  border-radius: 100%;
  background-color: #ececec;
  overflow: hidden;
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

<div
  className="c0"
  size="large"
>
  <span
    style={
      Object {
        "background": "none",
        "border": 0,
        "boxSizing": "border-box",
        "display": "inline-block",
        "height": "initial",
        "margin": 0,
        "maxWidth": "100%",
        "opacity": 1,
        "overflow": "hidden",
        "padding": 0,
        "position": "relative",
        "width": "initial",
      }
    }
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "margin": 0,
          "maxWidth": "100%",
          "opacity": 1,
          "padding": 0,
          "width": "initial",
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27100%27%20height=%27100%27/%3e"
        style={
          Object {
            "background": "none",
            "border": 0,
            "display": "block",
            "height": "initial",
            "margin": 0,
            "maxWidth": "100%",
            "opacity": 1,
            "padding": 0,
            "width": "initial",
          }
        }
      />
    </span>
    <img
      className="c1"
      data-nimg="intrinsic"
      decoding="async"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
    <noscript>
      <img
        className="c1"
        data-nimg="intrinsic"
        decoding="async"
        loading="lazy"
        src="https://i1.sndcdn.com/avatars-EavWtcIVfiIYyIML-q1Eppg-t500x500.jpg"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </noscript>
  </span>
</div>
`;

exports[`Storyshots Atoms/Button Default 1`] = `
.c0 {
  padding: 0.56rem 1.56rem;
  border: none;
  border-radius: 4px;
  background-color: "#e0e1e2";
  font-weight: bold;
  font-size: 0.87rem;
  color: rgba(0,0,0,0.6);
  cursor: pointer;
  -webkit-transition: 0.12s;
  transition: 0.12s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c0:hover {
  -webkit-filter: brightness(90%);
  filter: brightness(90%);
}

.c0:active {
  -webkit-filter: brightness(75%);
  filter: brightness(75%);
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`Storyshots Atoms/Forms/Field Default 1`] = `
.c0 {
  font-size: 0.813rem;
  font-weight: bold;
  color: rgba(51,51,51,0.87);
  margin-bottom: 0.3rem;
}

.c1 {
  padding: 0.62rem 1.06rem;
  border-radius: 4px;
  border: solid 1px #dededf;
  background-color: #fff;
}

.c1::-webkit-input-placeholder {
  color: #b5b5b5;
}

.c1::-moz-placeholder {
  color: #b5b5b5;
}

.c1:-ms-input-placeholder {
  color: #b5b5b5;
}

.c1::placeholder {
  color: #b5b5b5;
}

<div>
  <div
    className="c0"
  >
    LabelStyled
  </div>
  <input
    className="c1"
    placeholder="Placeholder Text"
  />
</div>
`;

exports[`Storyshots Atoms/Forms/Input Default 1`] = `
.c0 {
  width: 100%;
  line-height: 1.75;
  font-weight: 400;
  padding: 8px 16px;
  background-color: #eef3f8;
  border-radius: 0.4rem;
  color: rgba(0,0,0,0.9);
  border: none;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.5);
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.5);
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.5);
}

.c0::placeholder {
  color: rgba(0,0,0,0.5);
}

<input
  className="c0"
  placeholder="Testing Text"
/>
`;

exports[`Storyshots Atoms/Icon Default 1`] = `
<div
  className=""
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</div>
`;

exports[`Storyshots Atoms/Icon Home 1`] = `
<div
  className=""
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</div>
`;

exports[`Storyshots Atoms/Typography/H1 Default 1`] = `
.c0 {
  font-size: 1.75rem;
  font-weight: bold;
  line-height: 1.29;
  color: rgba(0,0,0,0.87);
  font-size: 1.5rem;
}

<h1
  className="c0"
  fontSize={3}
>
  This is header.
</h1>
`;

exports[`Storyshots Atoms/Typography/P Default 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
}

<p
  className="c0"
>
  this is pargraph.
</p>
`;

exports[`Storyshots Atoms/Typography/Span Bold 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  font-weight: bold;
}

<span
  className="c0"
>
  Span
</span>
`;

exports[`Storyshots Atoms/Typography/Span Color 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  color: #2185d0;
}

<span
  className="c0"
  color="primary"
>
  Span
</span>
`;

exports[`Storyshots Atoms/Typography/Span Default 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
}

<span
  className="c0"
>
  Span
</span>
`;

exports[`Storyshots Molecules/CardHeader Default 1`] = `
.c1 {
  width: 1.87rem;
  height: 1.87rem;
  border-radius: 100%;
  background-color: #ececec;
  overflow: hidden;
}

.c3 {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  font-weight: bold;
}

.c5 {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  color: rgba(0,0,0,0.4);
}

.c0 {
  position: relative;
  background-color: #fff;
  padding: 0.93rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  margin-left: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: absolute;
  right: 0.93rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    size="small"
  />
  <div
    className="c2"
  >
    <span
      className="c3"
    >
      Span
    </span>
  </div>
  <div
    className="c4"
  >
    <span
      className="c5"
      color="gray2"
    >
      Span
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules/Gnb/GnbButton Active 1`] = `
.c0 {
  width: 80px;
  padding: 5px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  color: rgba(0,0,0,0.6);
  border-bottom: 2px solid #1b1c1d;
  color: #1b1c1d;
}

.c0 span {
  color: rgba(0,0,0,0.6);
}

.c0:hover {
  color: #1b1c1d;
}

.c0:hover span {
  color: #1b1c1d;
}

.c0 span {
  color: #1b1c1d;
}

<div
  className="c0"
>
  <p>
    Test
  </p>
</div>
`;

exports[`Storyshots Molecules/Gnb/GnbButton Default 1`] = `
.c0 {
  width: 80px;
  padding: 5px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  color: rgba(0,0,0,0.6);
}

.c0 span {
  color: rgba(0,0,0,0.6);
}

.c0:hover {
  color: #1b1c1d;
}

.c0:hover span {
  color: #1b1c1d;
}

<div
  className="c0"
>
  <p>
    Test
  </p>
</div>
`;

exports[`Storyshots Molecules/Gnb/GnbMenu Active 1`] = `
.c1 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  font-size: 12px;
}

.c0 {
  width: 80px;
  padding: 5px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  color: rgba(0,0,0,0.6);
  border-bottom: 2px solid #1b1c1d;
  color: #1b1c1d;
}

.c0 span {
  color: rgba(0,0,0,0.6);
}

.c0:hover {
  color: #1b1c1d;
}

.c0:hover span {
  color: #1b1c1d;
}

.c0 span {
  color: #1b1c1d;
}

<div
  className="c0"
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
    />
  </svg>
  <span
    className="c1"
    fontSize={12}
  >
    Test1
  </span>
</div>
`;

exports[`Storyshots Molecules/Gnb/GnbMenu Default 1`] = `
.c1 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  font-size: 12px;
}

.c0 {
  width: 80px;
  padding: 5px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  color: rgba(0,0,0,0.6);
}

.c0 span {
  color: rgba(0,0,0,0.6);
}

.c0:hover {
  color: #1b1c1d;
}

.c0:hover span {
  color: #1b1c1d;
}

<div
  className="c0"
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
    />
  </svg>
  <span
    className="c1"
    fontSize={12}
  >
    Test1
  </span>
</div>
`;

exports[`Storyshots Molecules/Gnb/GnbProfile Default 1`] = `
.c5 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  font-size: 12px;
}

.c0 {
  width: 80px;
  padding: 5px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  color: rgba(0,0,0,0.6);
}

.c0 span {
  color: rgba(0,0,0,0.6);
}

.c0:hover {
  color: #1b1c1d;
}

.c0:hover span {
  color: #1b1c1d;
}

.c1 {
  position: relative;
  width: 24px;
  height: 24px;
}

.c2 {
  border-radius: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -5px;
}

.c4 {
  margin-top: 3px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        className="c2"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className="c2"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="/img.jpg"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <span
        className="c5"
        fontSize={12}
      >
        Me
      </span>
    </div>
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Molecules/Snb/SnbProfileButton Default 1`] = `
.c0 {
  position: relative;
  max-width: 225px;
  background-color: #fff;
  padding: 4px 12px;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
}

.c0:hover {
  background-color: rgba(0,0,0,0.1);
}

<div
  className="c0"
>
  Test Content
</div>
`;

exports[`Storyshots Molecules/Snb/SnbProfileHeader Default 1`] = `
.c6 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  margin: 0;
  font-size: 16px;
}

.c8 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  margin: 0;
  font-size: 12px;
  color: rgba(0,0,0,0.6);
}

.c0 {
  max-width: 225px;
  background-color: #fff;
  padding-bottom: 16px;
  box-sizing: border-box;
}

.c1 {
  position: relative;
  width: 100%;
  height: 56px;
}

.c2 {
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.c3 {
  position: relative;
  width: 72px;
  height: 72px;
  margin: 0 auto;
  margin-top: -35px;
  margin-bottom: 20px;
  border-radius: 100%;
  border: 3px solid #fff;
}

.c4 {
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  border-radius: 100%;
}

.c5 {
  text-align: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c5 p:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        className="c2"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className="c2"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="/img.jpg"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
  <div
    className="c3"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        className="c4"
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className="c4"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="/img.jpg"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
  <div
    className="c5"
  >
    <p
      className="c6"
      fontSize={16}
    >
      Test User
    </p>
  </div>
  <div
    className="c7"
  >
    <p
      className="c8"
      color="grayPoint6"
      fontSize={12}
    >
      Test Description
    </p>
  </div>
</div>
`;

exports[`Storyshots Organisms/Card Default 1`] = `
.c2 {
  width: 1.87rem;
  height: 1.87rem;
  border-radius: 100%;
  background-color: #ececec;
  overflow: hidden;
}

.c3 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c5 {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  font-weight: bold;
}

.c7 {
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  color: rgba(0,0,0,0.4);
}

.c1 {
  position: relative;
  background-color: #fff;
  padding: 0.93rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-left: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  position: absolute;
  right: 0.93rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  max-width: 18.31rem;
  border-radius: 0.4rem;
  background-color: #fff;
  overflow: hidden;
  box-shadow: rgb(243 243 243 / 44%) 0px 5px 16px, rgb(24 24 43 / 3%) 0px 1.3478px 6px,rgb(0 0 0 / 3%) 0px 2.0217px 16.6957px;
}

.c8 {
  width: 100%;
  height: 15rem;
  position: relative;
}

<h1
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size="small"
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "inline-block",
            "height": "initial",
            "margin": 0,
            "maxWidth": "100%",
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "initial",
          }
        }
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "padding": 0,
              "width": "initial",
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27100%27%20height=%27100%27/%3e"
            style={
              Object {
                "background": "none",
                "border": 0,
                "display": "block",
                "height": "initial",
                "margin": 0,
                "maxWidth": "100%",
                "opacity": 1,
                "padding": 0,
                "width": "initial",
              }
            }
          />
        </span>
        <img
          className="c3"
          data-nimg="intrinsic"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": undefined,
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            className="c3"
            data-nimg="intrinsic"
            decoding="async"
            loading="lazy"
            src="static/media/public/images/avatar.png"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
    </div>
    <div
      className="c4"
    >
      <span
        className="c5"
      >
        Dylan
      </span>
    </div>
    <div
      className="c6"
    >
      <span
        className="c7"
        color="gray2"
      >
        17h
      </span>
    </div>
  </div>
  <div
    className="c8"
  >
    <span
      style={
        Object {
          "background": "none",
          "border": 0,
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": "initial",
          "left": 0,
          "margin": 0,
          "opacity": 1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "initial",
        }
      }
    >
      <img
        className=""
        data-nimg="fill"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
      <noscript>
        <img
          className=""
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="/img.jpg"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
    </span>
  </div>
</h1>
`;

exports[`Storyshots Organisms/Gnb Default 1`] = `
.c5 {
  width: 100%;
  line-height: 1.75;
  font-weight: 400;
  padding: 8px 16px;
  background-color: #eef3f8;
  border-radius: 0.4rem;
  color: rgba(0,0,0,0.9);
  border: none;
}

.c5::-webkit-input-placeholder {
  color: rgba(0,0,0,0.5);
}

.c5::-moz-placeholder {
  color: rgba(0,0,0,0.5);
}

.c5:-ms-input-placeholder {
  color: rgba(0,0,0,0.5);
}

.c5::placeholder {
  color: rgba(0,0,0,0.5);
}

.c8 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  font-size: 12px;
}

.c7 {
  width: 80px;
  padding: 5px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  color: rgba(0,0,0,0.6);
  border-bottom: 2px solid #1b1c1d;
  color: #1b1c1d;
}

.c7 span {
  color: rgba(0,0,0,0.6);
}

.c7:hover {
  color: #1b1c1d;
}

.c7:hover span {
  color: #1b1c1d;
}

.c7 span {
  color: #1b1c1d;
}

.c9 {
  width: 80px;
  padding: 5px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  color: rgba(0,0,0,0.6);
}

.c9 span {
  color: rgba(0,0,0,0.6);
}

.c9:hover {
  color: #1b1c1d;
}

.c9:hover span {
  color: #1b1c1d;
}

.c10 {
  position: relative;
  width: 24px;
  height: 24px;
}

.c11 {
  border-radius: 100%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -5px;
}

.c13 {
  margin-top: 3px;
}

.c0 {
  width: 100%;
  background-color: #fff;
  border-bottom: 1px solid rgba(0,0,0,0.08);
}

.c1 {
  position: relative;
  max-width: 1128px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0 auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  position: relative;
  width: 34px;
  height: 34px;
  margin: 0px 7px;
}

.c4 {
  min-width: 240px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "left": 0,
              "margin": 0,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "initial",
            }
          }
        >
          <img
            className=""
            data-nimg="fill"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "cover",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
          <noscript>
            <img
              className=""
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="/img.jpg"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": "cover",
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
        </span>
      </div>
      <div
        className="c4"
      >
        <input
          className="c5"
          placeholder="Search"
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
        <span
          className="c8"
          fontSize={12}
        >
          Home
        </span>
      </div>
      <div
        className="c9"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
          />
        </svg>
        <span
          className="c8"
          fontSize={12}
        >
          My Network
        </span>
      </div>
      <div
        className="c9"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 6h-4V4c0-1.11-.89-2-2-2h-4c-1.11 0-2 .89-2 2v2H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-6 0h-4V4h4v2z"
          />
        </svg>
        <span
          className="c8"
          fontSize={12}
        >
          Jobs
        </span>
      </div>
      <div
        className="c9"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 9h12v2H6V9zm8 5H6v-2h8v2zm4-6H6V6h12v2z"
          />
        </svg>
        <span
          className="c8"
          fontSize={12}
        >
          Messaging
        </span>
      </div>
      <div
        className="c9"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
          />
        </svg>
        <span
          className="c8"
          fontSize={12}
        >
          Notifications
        </span>
      </div>
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <span
            style={
              Object {
                "background": "none",
                "border": 0,
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "left": 0,
                "margin": 0,
                "opacity": 1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "initial",
              }
            }
          >
            <img
              className="c11"
              data-nimg="fill"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": "cover",
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <noscript>
              <img
                className="c11"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="/img.jpg"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": "cover",
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
            </noscript>
          </span>
        </div>
        <div
          className="c12"
        >
          <div
            className="c13"
          >
            <span
              className="c8"
              fontSize={12}
            >
              Me
            </span>
          </div>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/SnbProfile Default 1`] = `
.c7 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  margin: 0;
  font-size: 16px;
}

.c9 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  margin: 0;
  font-size: 12px;
  color: rgba(0,0,0,0.6);
}

.c13 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  margin: 0;
  font-size: 12px;
  font-weight: bold;
  color: rgba(0,0,0,0.6);
}

.c14 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  margin: 0;
  font-size: 12px;
  font-weight: bold;
  color: #1b1c1d;
}

.c20 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  margin: 0;
  font-size: 12px;
  font-weight: bold;
}

.c15 {
  font-weight: normal;
  line-height: 1.5;
  color: rgba(0,0,0,0.8);
  font-size: 12px;
  font-weight: bold;
  color: #2185d0;
}

.c11 {
  position: relative;
  max-width: 225px;
  background-color: #fff;
  padding: 4px 12px;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
}

.c11:hover {
  background-color: rgba(0,0,0,0.1);
}

.c17 {
  position: relative;
  max-width: 225px;
  background-color: #fff;
  padding: 4px 12px;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
  padding: 12px;
}

.c17:hover {
  background-color: rgba(0,0,0,0.1);
}

.c1 {
  max-width: 225px;
  background-color: #fff;
  padding-bottom: 16px;
  box-sizing: border-box;
}

.c2 {
  position: relative;
  width: 100%;
  height: 56px;
}

.c3 {
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.c4 {
  position: relative;
  width: 72px;
  height: 72px;
  margin: 0 auto;
  margin-top: -35px;
  margin-bottom: 20px;
  border-radius: 100%;
  border: 3px solid #fff;
}

.c5 {
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  border-radius: 100%;
}

.c6 {
  text-align: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c6 p:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  text-align: center;
}

.c0 {
  max-width: 225px;
  ${boxRadius}
  overflow: hidden;
  position: relative;
  border: 1px solid rgba(0,0,0,0.08);
}

.c21 {
  width: 100%;
  border-bottom: 1px solid rgba(0,0,0,0.08);
}

.c10 {
  width: 100%;
  height: 12px;
  background-color: #fff;
  border-top: 1px solid rgba(0,0,0,0.08);
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 12px;
  background-color: #fff;
  border-bottom: 1px solid rgba(0,0,0,0.08);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 3px;
}

.c18 p {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18 p:hover {
  color: #2185d0;
}

.c19 {
  position: relative;
  width: 16px;
  height: 16px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 7px;
  padding: 6px 0px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  position: relative;
  top: 2px;
  color: rgba(0,0,0,0.6);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": "initial",
            "left": 0,
            "margin": 0,
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "initial",
          }
        }
      >
        <img
          className="c3"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            className="c3"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="/img.jpg"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "cover",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
    </div>
    <div
      className="c4"
    >
      <span
        style={
          Object {
            "background": "none",
            "border": 0,
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": "initial",
            "left": 0,
            "margin": 0,
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "initial",
          }
        }
      >
        <img
          className="c5"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            className="c5"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="/img.jpg"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "cover",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
    </div>
    <div
      className="c6"
    >
      <p
        className="c7"
        fontSize={16}
      >
        Test User
      </p>
    </div>
    <div
      className="c8"
    >
      <p
        className="c9"
        color="grayPoint6"
        fontSize={12}
      >
        Test Description
      </p>
    </div>
  </div>
  <div
    className="c10"
  />
  <div
    className="c11"
  >
    <div
      className="c12"
    >
      <div>
        <p
          className="c13"
          color="grayPoint6"
          fontSize={12}
        >
          Connections
        </p>
        <p
          className="c14"
          color="black"
          fontSize={12}
        >
          Grow your network
        </p>
      </div>
      <span
        className="c15"
        color="primary"
        fontSize={12}
      >
        37
      </span>
    </div>
  </div>
  <div
    className="c11"
  >
    <div
      className="c12"
    >
      <p
        className="c13"
        color="grayPoint6"
        fontSize={12}
      >
        Who's viewed your profile
      </p>
      <span
        className="c15"
        color="primary"
        fontSize={12}
      >
        26
      </span>
    </div>
  </div>
  <div
    className="c16"
  />
  <div
    className="c17"
  >
    <p
      className="c9"
      color="grayPoint6"
      fontSize={12}
    >
      Access exclusive tools & insights
    </p>
    <div
      className="c18"
    >
      <div
        className="c19"
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "left": 0,
              "margin": 0,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "initial",
            }
          }
        >
          <img
            className=""
            data-nimg="fill"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "cover",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
          <noscript>
            <img
              className=""
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="/img.jpg"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": "cover",
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
        </span>
      </div>
      <p
        className="c20"
        fontSize={12}
      >
        Get Hired Faster, Try Premium Free
      </p>
    </div>
  </div>
  <div
    className="c21"
  />
  <div
    className="c11"
  >
    <div
      className="c22"
    >
      <div
        className="c23"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          style={
            Object {
              "fontSize": "16px",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </div>
      <p
        className="c14"
        color="black"
        fontSize={12}
      >
        My items
      </p>
    </div>
  </div>
</div>
`;
